Fix display bug - delete button had wrong margins set

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -180,7 +180,7 @@ main {
     border: 1px solid #e53935;
     color: white;
     transition: 0.5s;
-    margin-bottom: 1rem;
+    margin: 0.5rem auto 1rem;
 }
 
 .btn--red:hover,
